--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "motion": "^12.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
